Version 0.1.7 **BETA VERSION - FEATURES ARE NOT DONE YET**
- Achievements
- Level rewards

Version 0.1.6b
- Removed Christmas Skin.

Version 0.1.6
- Coin flip game. Bet a few points of your choosing to double them or lose them!
- New item: Clicker Buddy Multiplication - 1500 Points - Clicker Buddies can use your Click Multiplier!
- Backend changes 

Version 0.1.5
- New Skin: Idiot! - 325 Points -YOU ARE AN IDIOT! HAHAHAHAHAHAHAHAHAHAHAHAHA! (note: this skin flashes when clicked, may cause eye strain when clicked too fast.)
- Shop now loads from a file (storeListings.json)
- Added Levels! It doesn't do much right now but i have plans ;)
- Renamed score to points
- Backend changes (cleaned up some code for example)

Version 0.1.4
- New Skin: Moden - 225 Points - Clean & Simplistic
- Mobile clicker icon scaling (you can force it by calling 'debug("forceMobile")' on pc)
- changed prices for Click x3, Click x4, Click x7 and Click x8
- Backend changes (mainly cleaning)

Version 0.1.3
- Added Skins! The first batch are "ASCII Smile" and "Default but cooler"
- New Christmas Event (Until 01/01!)
- New item! x2 your Current Score - One time use - 0 Points: Double your current score by 2. The catch is you can only use it once.
- Fixes idk

Version 0.1.2
- New sprite when clicking the face
- Added sound when buying a thing
- Other small changes

Version 0.1.1
- Item Icons
- Link Embeds
- Links to source code and github repo

Version 0.1.0
- Initial Version